white space below circles fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -277,6 +277,12 @@ nav {
  	}
 	.section_white_page {
  		margin-top: 45px;
+ 		margin-bottom: 30px;
+	}
+	.section_white_main {
+ 		margin-top: 70px; 
+ 		background:white;
+ 		margin-bottom: 30px;
 	}
  	#title {
 	 	margin-top: 200px;
